Add param for demo suffix

--- a/CommonPipelineResources/cicd-tasks.yaml
+++ b/CommonPipelineResources/cicd-tasks.yaml
@@ -74,9 +74,12 @@ spec:
     - name: namespace
       type: string
       description: release namespace
+    - name: suffix
+      type: string
+      description: Suffix for the demo
   workspaces:
     - name: git-source
   steps:
     - name: oc
       image: quay.io/openshift/origin-cli:latest
-      script: "/workspace/git-source/products/bash/$(params.releaseScript) -n $(params.namespace) -r $(params.releaseName) -i image-registry.openshift-image-registry.svc:5000/$(params.namespace)/$(params.imageName):$(params.imageTag) {{TRACING}}"
+      script: "/workspace/git-source/products/bash/$(params.releaseScript) -n $(params.namespace) -r $(params.releaseName) -i image-registry.openshift-image-registry.svc:5000/$(params.namespace)/$(params.imageName):$(params.imageTag) {{TRACING}} -s $(params.suffix)"
