--- a/DrivewayDentDeletion/Operators/cicd-test-apic/cicd-pipeline.yaml
+++ b/DrivewayDentDeletion/Operators/cicd-test-apic/cicd-pipeline.yaml
@@ -164,6 +164,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -183,6 +185,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -202,6 +206,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -221,6 +227,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -350,6 +358,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}-ddd-test"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -371,6 +381,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}-ddd-test"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -392,6 +404,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}-ddd-test"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
@@ -413,6 +427,8 @@ spec:
           value: release-ace-integration-server.sh
         - name: namespace
           value: "{{NAMESPACE}}-ddd-test"
+        - name: suffix
+          value: "ddd"
       workspaces:
         - name: git-source
           workspace: git-source
