eei bar prereqs wip

--- a/EventEnabledInsurance/MQ/Dockerfile
+++ b/EventEnabledInsurance/MQ/Dockerfile
@@ -1,8 +1,11 @@
 FROM cp.icr.io/cp/ibm-mqadvanced-server-integration@sha256:b03d83a14f5fc21b943ed23ca9c532bd564821b72d782864f7345d388334a197
 RUN echo -e "\
-DEFINE QLOCAL('Quote') \n\
-DEFINE CHANNEL(ACE_SVRCONN) CHLTYPE(SVRCONN) TRPTYPE(TCP) MCAUSER('mqm') \n\
-SET CHLAUTH(ACE_SVRCONN) TYPE(BLOCKUSER) ACTION(REPLACE) USERLIST('nobody') \n\
-alter qmgr CONNAUTH('') \n\
-REFRESH SECURITY" > /etc/mqm/aceldap.mqsc
+  DEFINE QLOCAL('Quote') DEFPSIST(YES) \n\
+  DEFINE CHANNEL(ACE_SVRCONN) CHLTYPE(SVRCONN) TRPTYPE(TCP) SSLCAUTH(REQUIRED) SSLCIPH('ECDHE_RSA_AES_128_CBC_SHA256') \n\
+  ALTER AUTHINFO(SYSTEM.DEFAULT.AUTHINFO.IDPWOS) AUTHTYPE(IDPWOS) ADOPTCTX(YES) CHCKCLNT(OPTIONAL) CHCKLOCL(OPTIONAL) AUTHENMD(OS) \n\
+  SET CHLAUTH('ACE_SVRCONN') TYPE(SSLPEERMAP) SSLPEER('CN=application1,OU=app team1') USERSRC(MAP) MCAUSER('mqm') ACTION(ADD) \n\
+  REFRESH SECURITY TYPE(CONNAUTH) \n\
+  SET AUTHREC PRINCIPAL('mqm') OBJTYPE(QMGR) AUTHADD(CONNECT,INQ) \n\
+  SET AUTHREC PROFILE('Quote') PRINCIPAL('mqm') OBJTYPE(QUEUE) AUTHADD(BROWSE,GET,INQ,PUT) \n\
+  REFRESH SECURITY" > /etc/mqm/aceldap.mqsc
 RUN cat /etc/mqm/aceldap.mqsc
