--- a/CommonPipelineResources/cicd-tasks-new.yaml
+++ b/CommonPipelineResources/cicd-tasks-new.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: build-task-with-pvc
+  name: build-task
 spec:
   params:
     - name: imageTag
@@ -86,13 +86,6 @@ spec:
         buildah --storage-driver vfs push \
           --tls-verify=false \
           image-registry.openshift-image-registry.svc:5000/{{NAMESPACE}}/$(params.imageName):$(params.imageTag)
-      resources:
-        requests:
-          memory: "4Gi"
-          cpu: "1"
-          ephemeral-storage: "1Gi"
-        limits:
-          ephemeral-storage: "1Gi"
 
 ---
 
