Restore default config names to ddd-specific configs

--- a/products/bash/ace/server.conf.yaml
+++ b/products/bash/ace/server.conf.yaml
@@ -5,6 +5,6 @@ forceServerHTTPS: true
 forceServerHTTPSecurityProfile: '{DefaultPolicies}:BasicAuthPolicy'
 ResourceManagers:
   HTTPSConnector:
-    KeystoreFile: '/home/aceuser/keystores/{{KEYSTORE_NAME}}'
+    KeystoreFile: '/home/aceuser/keystores/keystore'
     KeystoreType: 'PKCS12'
     KeystorePassword: 'brokerKeystore::password'
