--- a/DrivewayDentDeletion/Operators/apic-resources/apic-api-ddd.yaml
+++ b/DrivewayDentDeletion/Operators/apic-resources/apic-api-ddd.yaml
@@ -74,7 +74,7 @@ x-ibm-configuration:
   properties:
     target-url:
       value: >-
-        https://{{ACE_API_INT_SRV_ROUTE}}
+        {{TARGET_URL}}
       description: The URL of the target service
       encoded: false
   assembly:
@@ -93,8 +93,8 @@ x-ibm-configuration:
             values:
               - ^X-IBM-Client-Id$
           inject-proxy-headers: true
-          username: {{ACE_API_USER}}
-          password: {{ACE_API_PASS}}
+          username: {{BASIC_AUTH_USERNAME}}
+          password: {{BASIC_AUTH_PASSWORD}}
   type: rest
   phase: realized
   enforced: true
