--- a/EventEnabledInsurance/apic/apic-product-eei.yaml
+++ b/EventEnabledInsurance/apic/apic-product-eei.yaml
@@ -1,30 +1,29 @@
 info:
     version: 1.0.0
-    title: eei-product
-    name: eei-product
-  gateways:
-    - datapower-api-gateway
-  plans:
-    default-plan:
-      rate-limits:
-        default:
-          value: 100/1hour
-      title: Default Plan
-      description: Default Plan
-      approval: false
-  apis:
-    eventenabledinsurance1.0.0:
-      name: 'eventenabledinsurance:1.0.0'
-  visibility:
-    view:
-      type: public
-      orgs: []
-      tags: []
-      enabled: true
-    subscribe:
-      type: authenticated
-      orgs: []
-      tags: []
-      enabled: true
-  product: 1.0.0
-  
+    title: {{NAMESPACE}}-product-eei
+    name: {{NAMESPACE}}-product-eei
+gateways:
+  - datapower-api-gateway
+plans:
+  default-plan:
+    rate-limits:
+      default:
+        value: 100/1hour
+    title: Default Plan
+    description: Default Plan
+    approval: false
+apis:
+  eventenabledinsurance1.0.0:
+    name: 'eventenabledinsurance:1.0.0'
+visibility:
+  view:
+    type: public
+    orgs: []
+    tags: []
+    enabled: true
+  subscribe:
+    type: authenticated
+    orgs: []
+    tags: []
+    enabled: true
+product: 1.0.0
