--- a/DrivewayDentDeletion/Operators/cicd-test/cicd-roles.yaml
+++ b/DrivewayDentDeletion/Operators/cicd-test/cicd-roles.yaml
@@ -10,7 +10,7 @@ rules:
   verbs: ["create", "delete", "get", "list", "patch", "update", "watch"]
 # Permission to get pods during deploy stage
 - apiGroups: [""]
-  resources: ["pods", "pods/exec", "configmaps", "secrets", "serviceaccounts", "service"]
+  resources: ["pods", "pods/exec", "configmaps", "secrets", "serviceaccounts", "services"]
   verbs: ["list", "get", "create", "delete"]
 
 
