--- a/DrivewayDentDeletion/Operators/cicd-test-apic/cicd-roles.yaml
+++ b/DrivewayDentDeletion/Operators/cicd-test-apic/cicd-roles.yaml
@@ -208,7 +208,7 @@ rules:
 # Permission to get secrets for test script in test namespace
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get"]
+  verbs: ["get", "create"]
 # Permission to create configmaps for test script in test namespace
 - apiGroups: [""]
   resources: ["configmaps"]
