added postgres.env into gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ EventEnabledInsurance/ProjectionClaims/build
 gradle
 gradlew
 gradlew.bat
+postgres.env
 postgres.yaml
 pgpass_gen.sh
 product.yaml
